Add example programs to access data

--- a/harmony-0.9/web/index.html
+++ b/harmony-0.9/web/index.html
@@ -122,6 +122,7 @@
         switch (message.command) {
             case 'load':
                 // todo: do something with the json data
+                console.log(message);
                 console.log(message.jsonData)
                 console.log(message.jsonData.hasBadNode())
                 document.getElementById("towa").innerHTML = message.jsonData.hasBadNode();
